feat: openapi関連のフォルダ構成を変更

--- a/backend/docs/src/paths/users/index.yaml
+++ b/backend/docs/src/paths/users/index.yaml
@@ -42,9 +42,9 @@ get:
       description: Successful operation
       content:
         application/json:
-          array:
-            schema:
-              $ref: "../../openapi.yml#/components/schemas/User"
+          schema:
+            type: string
+            $ref: "../../../src/schemas/user.yaml"
     "400":
       description: Invalid ID supplied
     "404":
