--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     container_name: 'kintai_doc'
     image: swaggerapi/swagger-ui
     volumes:
-      - ./docs:/app
+      - ./backend/docs:/app
     environment:
       SWAGGER_JSON: /app/openapi.yaml
     ports:
