--- a/backend/docs/src/paths/users/index.yaml
+++ b/backend/docs/src/paths/users/index.yaml
@@ -1,57 +1,60 @@
-get:
-  tags:
-    - users
-  summary: ユーザー一覧
-  description: ユーザーの一覧です
-  operationId: users
-  parameters:
-    - name: status
-      in: query
-      description: 状態（在職/休職/退職）
-      required: false
-      explode: false
-      schema:
-        type: string
-        default: available
-        enum:
-          - employee
-          - retire
-          - leave
-    - name: name
-      in: query
-      description: ユーザー名（部分一致）
-      required: false
-      explode: false
-      schema:
-        type: string
-    - name: department
-      in: query
-      description: 部署
-      required: false
-      explode: false
-      schema:
-        type: array
-        enum:
-          - develop
-          - design
-          - sales
-          - qa
-          - general
-  responses:
-    "200":
-      description: Successful operation
-      content:
-        application/json:
+paths:
+  /users:
+    get:
+      tags:
+        - users
+      summary: ユーザー一覧
+      description: ユーザーの一覧です
+      operationId: users
+      parameters:
+        - name: status
+          in: query
+          description: 状態（在職/休職/退職）
+          required: false
+          explode: false
           schema:
             type: string
-            $ref: "../../../src/schemas/user.yaml"
-    "400":
-      description: Invalid ID supplied
-    "404":
-      description: Pet not found
-    "405":
-      description: Validation exception
-  security:
-    - petstore_auth:
-        - write:pets
-        - read:pets
+            default: available
+            enum:
+              - employee
+              - retire
+              - leave
+        - name: name
+          in: query
+          description: ユーザー名（部分一致）
+          required: false
+          explode: false
+          schema:
+            type: string
+        - name: department
+          in: query
+          description: 部署
+          required: false
+          explode: false
+          schema:
+            type: array
+            enum:
+              - develop
+              - design
+              - sales
+              - qa
+              - general
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              type: array
+              items:
+                schema:
+                  $ref: "../../../src/schemas/user.yaml#/components/schemas/user"
+        "400":
+          description: Invalid ID supplied
+        "404":
+          description: Pet not found
+        "405":
+          description: Validation exception
+      security:
+        - petstore_auth:
+            - write:pets
+            - read:pets
