--- a/backend/docs/src/schemas/department.yaml
+++ b/backend/docs/src/schemas/department.yaml
@@ -1,11 +1,14 @@
-required:
-  - department_name
-type: object
-properties:
-  id:
-    type: integer
-    format: int64
-    example: 10
-  department_name:
-    type: string
-    example: エンジニア
+components:
+  schemas:
+    department:
+      required:
+        - department_name
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 10
+        department_name:
+          type: string
+          example: エンジニア
