--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -35,6 +35,7 @@ jobs:
         uses: ruby/setup-ruby@78c01b705fd9d5ad960d432d3a0cfa341d50e410 # v1.179.1
         with:
           bundler-cache: true
+          ruby-version: '3.1.6'
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:migrate
