--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -44,6 +44,8 @@ jobs:
       - name: Bundle install
         run: bundle install
       # Add or replace database setup steps here
+      - name: Start MySQL
+        run: sudo /etc/init.d/mysql start
       - name: Set up database schema
         run: bin/rails db:migrate
       # Add or replace test runners here
