--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -22,6 +22,7 @@ jobs:
         ports:
           - "3306:3306"
         env:
+          MYSQL_DATABASE: kintai_test
           MYSQL_ROOT_PASSWORD: password
           TZ: "Asia/Tokyo"
     env:
@@ -29,7 +30,7 @@ jobs:
       DATABASE_URL: "mysql://root:password@localhost:3306/kintai_test"
       DB_USER: root
       DB_PASSWORD: password
-      DB_HOST: "mysql://root:password@localhost:3306/kintai_test"
+      DB_HOST: mysql
       DB_DATABASE: kintai_test
     steps:
       - name: Checkout code
