--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -27,7 +27,7 @@ jobs:
           TZ: "Asia/Tokyo"
     env:
       RAILS_ENV: test
-      DATABASE_URL: "mysql://root:password@localhost:3306/kintai_test"
+      DATABASE_URL: "mysql2://root:password@localhost:3306/kintai_test"
       DB_USER: root
       DB_PASSWORD: password
       DB_HOST: mysql
