--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -29,7 +29,7 @@ jobs:
       RAILS_ENV: test
       DB_USER: root
       DB_PASSWORD: password
-      DB_HOST: localhost
+      DB_HOST: localhost:3306
       DB_DATABASE: kintai_test
     steps:
       - name: Checkout code
