--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -48,9 +48,9 @@ jobs:
       - name: Start MySQL
         run: sudo /etc/init.d/mysql start
       - name: Set up database schema
-        run: bin/rails db:create
+        run: bin/rails db:create RAILS_ENV=test
       - name: Set up database schema
-        run: bin/rails db:migrate
+        run: bin/rails db:migrate RAILS_ENV=test
       # Add or replace test runners here
       - name: Run tests
         run: bin/rails test
