--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           output: swagger-ui
           spec-file: openapi.yaml
+          github_token: ${{ secrets.SECRET_KEY }}
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
