--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -21,13 +21,13 @@ jobs:
         image: mysql:9
         env:
           MYSQL_DATABASE: kintai_test
-          MYSQL_ROOT_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: root
           MYSQL_ROOT_HOST: '%'
           TZ: "Asia/Tokyo"
     env:
       RAILS_ENV: test
       DB_USER: root
-      DB_PASSWORD: password
+      DB_PASSWORD: root
       DB_HOST: localhost
       DB_DATABASE: kintai_test
     steps:
