--- a/backend/docs/src/schemas/user.yaml
+++ b/backend/docs/src/schemas/user.yaml
@@ -2,8 +2,8 @@ components:
   schemas:
     user:
       required:
-        - name
-        - photoUrls
+        - screen_name
+        - email
       type: object
       properties:
         id:
