--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -10,7 +10,7 @@ on:
 
 defaults:
   run:
-    working-directory: backend/docs
+    working-directory: backend
 
 jobs:
   deploy-to-github-pages:
@@ -24,17 +24,17 @@ jobs:
 
       - name: Validate Swagger Files
         run: |
-          swagger-cli validate -d openapi.yaml --type yaml
+          swagger-cli validate -d docs/openapi.yaml --type yaml
       - name: debug
         run: ls
       - name: Generate Swagger UI
         uses: Legion2/swagger-ui-action@v1
         with:
-          output: swagger-ui
-          spec-file: openapi.yaml
+          output: docs
+          spec-file: docs/openapi.yaml
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: swagger-ui
+          publish_dir: docs
