feat: githubpagesの表示がうまくいっていないのでビルド方法を変更
変更前: openapi.yamlに直接$refがある状態
変更後: index.yamlを別で作成、$refを展開したopenapi.yamlを自動生成する

--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -13,10 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install swagger-cli
+      - name: Install packages
         run: |
-          npm install -g swagger-cli
+          npm install -g swagger-cli swagger-parser yamljs
 
+      - name: Generate Swagger Files
+        run: node main.js
       - name: Validate Swagger Files
         run: |
           swagger-cli validate -d backend/docs/openapi.yaml --type yaml
