--- a/backend/docs/package.json
+++ b/backend/docs/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "swagger-ui": "^5.17.14"
+    "swagger-parser": "^10.0.3",
+    "swagger-ui": "^5.17.14",
+    "yamljs": "^0.3.0"
   }
 }
