--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   deploy-to-github-pages:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend/docs
     steps:
       - uses: actions/checkout@v2
 
@@ -18,18 +21,18 @@ jobs:
           npm install -g swagger-cli swagger-parser yamljs
 
       - name: Generate Swagger Files
-        run: node backend/docs/main.js
+        run: node main.js
       - name: Validate Swagger Files
         run: |
-          swagger-cli validate -d backend/docs/openapi.yaml --type yaml
+          swagger-cli validate -d openapi.yaml --type yaml
       - name: Generate Swagger UI
         uses: Legion2/swagger-ui-action@v1
         with:
-          output: backend/docs/dest/.
-          spec-file: backend/docs/openapi.yaml
+          output: dest/.
+          spec-file: openapi.yaml
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: backend/docs/dest/**/*
+          publish_dir: dest/**/*
